# projeto_streamlit_aws

./: app.py  main.py  pyproject.toml
