[tool.poetry]
name = "projeto-streamlit-aws"
version = "0.1.0"
description = ""
authors = ["Mairon.az <duartemairon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.42.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
